improvement on responsive

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Escola Sonho Meu</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="../style/style.css" />
         <link rel="shortcut icon" href="../imgs/favicon.ico" />
@@ -40,5 +41,9 @@
                 <p>Linguagem oral e escrita: A aprendizagem da linguagem oral e escrita é um dos elementos importantes para as crianças ampliarem suas possibilidades de inserção e de participação nas diversas práticas sociais. O trabalho com a linguagem se constitui um dos eixos básicos na Educação Infantil, dada sua importância para a formação do sujeito, para a interação com as outras pessoas, na orientação das ações das crianças, na construção de muitos conhecimentos e no desenvolvimento do pensamento.</p>
             </div>
         </div>
+         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
+    
 </html>
