--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 </ul>
             </div>
         </nav>
+        <a class="up" href="#">
+            <img src="./imgs/up.svg" class="up" />
+        </a>
         <section class="home">
             <div class="bd-example">
                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
