sincronize with gh-pages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Escola Sonho Meu</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="./style/style.css" />
         <link rel="shortcut icon" href="./imgs/favicon.ico" />
@@ -32,6 +33,9 @@
                 </ul>
             </div>
         </nav>
+        <a class="up" href="#">
+            <img src="./imgs/up.svg" class="up" />
+        </a>
         <section class="home">
             <div class="bd-example">
                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -91,22 +95,13 @@
                 <p>Salvador - BA, 40301-155</p>
                 <p>(71) 3256-7537</p>
             </div>
-            <div>
+            <div class="total">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.365352349186!2d-38.49622368560393!3d-12.948457562851976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716058833164d03%3A0x31f8cae1a69a1679!2sEscola+Sonho+Meu!5e0!3m2!1spt-BR!2sbr!4v1555024638060!5m2!1spt-BR!2sbr"  frameborder="0" style="border:0" allowfullscreen>
                 </iframe>
             </div>  
         </section>
     </body>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>
-        twttr.widgets.createTimeline(
-        {
-            sourceType: "profile",
-            screenName: "TwitterDev"
-        },
-        document.getElementById("container")
-        );
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </html>
